# python-stuff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: __init__.py
src/python_stuff/http/: client.py
src/python_stuff/playing_cards/: cards.py
tests/http/: test_client.py
tests/playing_cards/: tests_cards.py
